--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,54 @@
-[package]
-name = "exchange_sim"
+[workspace]
+resolver = "2"
+members = [
+    # Shared kernel (used by all bounded contexts)
+    "crates/shared/core",
+    "crates/shared/ports",
+    "crates/shared/matching",
+    "crates/shared/clock",
+    "crates/shared/risk",
+
+    # Bounded contexts
+    "crates/exchange-sim",
+]
+
+[workspace.package]
 version = "0.1.0"
 edition = "2024"
+authors = ["l3p"]
 
-[dependencies]
+[workspace.dependencies]
+# Async runtime
 tokio = { version = "1.44.2", features = ["full"] }
+
+# Error handling
 thiserror = "1.0"
+
+# Identifiers & time
 uuid = { version = "1.16", features = ["v4", "serde"] }
 chrono = { version = "0.4.40", features = ["serde"] }
+
+# Serialization
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+
+# Logging
 log = "0.4.27"
 env_logger = "0.11.8"
-dashmap = "6.1"  # Thread-safe concurrent hash map
-priority-queue = "2.3.1"  # For efficient price-time priority
+
+# Concurrency
+dashmap = "6.1"
+
+# Data structures
+priority-queue = "2.3.1"
+
+# Decimal precision
 rust_decimal = { version = "1.37.1", features = ["serde"] }
 rust_decimal_macros = "1.37.1"
 
-[[test]]
-name = "integration_tests"
-path = "tests/integration_tests.rs"
+# Shared kernel crates
+athena-core = { path = "crates/shared/core" }
+athena-ports = { path = "crates/shared/ports" }
+athena-matching = { path = "crates/shared/matching" }
+athena-clock = { path = "crates/shared/clock" }
+athena-risk = { path = "crates/shared/risk" }
