Add application layer crates: gateway, strategy, order-manager, risk-manager, runner
New crates:
- athena-gateway: Transport layer with channel-based messaging and exchange adapters
- athena-strategy: Strategy framework with LocalOrderBook, MarketMaker, MeanReversionTaker
- athena-order-manager: Signal aggregation, execution planning, position tracking
- athena-risk-manager: Trading risk parameters, surveillance (spoofing/layering detection)
- athena-runner: Simulation orchestration with bootstrap, agents, event feed

Architecture:
- Tokio broadcast channels for market data (1-to-many)
- Tokio mpsc channels for order submission (many-to-1)
- Agent isolation with private state (no shared mutable state)
- 181 tests passing across all crates

Documentation:
- docs/ARCHITECTURE.md: System design with 10 mermaid diagrams
- docs/SIMULATION.md: Runner guide and configuration reference
- Updated README.md with crate structure and test coverage

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,13 @@ members = [
     "crates/shared/clock",
     "crates/shared/risk",
 
+    # Infrastructure
+    "crates/gateway",
+    "crates/strategy",
+    "crates/order-manager",
+    "crates/risk-manager",
+    "crates/runner",
+
     # Bounded contexts
     "crates/exchange-sim",
 ]
@@ -52,3 +59,10 @@ athena-ports = { path = "crates/shared/ports" }
 athena-matching = { path = "crates/shared/matching" }
 athena-clock = { path = "crates/shared/clock" }
 athena-risk = { path = "crates/shared/risk" }
+
+# Infrastructure
+athena-gateway = { path = "crates/gateway" }
+athena-strategy = { path = "crates/strategy" }
+athena-order-manager = { path = "crates/order-manager" }
+athena-risk-manager = { path = "crates/risk-manager" }
+athena-runner = { path = "crates/runner" }
