Add comprehensive REST and WebSocket integration tests
- Add 17 API integration tests covering:
  - Basic endpoints (ping, time, exchangeInfo)
  - Order book depth queries and ordering
  - Order submission (limit, market orders)
  - Order matching and fills
  - Order cancellation
  - Admin API (accounts, markets)
  - Rate limiting
  - Concurrent order submission

- Add 9 WebSocket integration tests covering:
  - Connection and subscription lifecycle
  - Stream management (subscribe, unsubscribe, list)
  - Depth and trade streams
  - Invalid request handling
  - Rate limiting
  - Combined REST + WebSocket scenarios

- Fix Axum 0.7+ path parameter syntax (:param -> {param})
- Fix order book get_bids/get_asks to return properly sorted results

--- a/exchange-sim/Cargo.toml
+++ b/exchange-sim/Cargo.toml
@@ -71,10 +71,13 @@ criterion = { version = "0.5", features = ["async_tokio"] }
 name = "exchange-sim"
 path = "src/main.rs"
 
-# Integration tests - uncomment when test files are created
-# [[test]]
-# name = "integration_tests"
-# path = "tests/integration_tests.rs"
+[[test]]
+name = "api_integration"
+path = "tests/api_integration.rs"
+
+[[test]]
+name = "websocket_integration"
+path = "tests/websocket_integration.rs"
 
 # Benchmarks - uncomment when bench files are created
 # [[bench]]
