--- a/exchange-sim/Cargo.toml
+++ b/exchange-sim/Cargo.toml
@@ -6,6 +6,9 @@ authors = ["l3p"]
 description = "Isolated exchange simulator with Binance-compatible WebSocket and REST API"
 
 [dependencies]
+# Shared trading types
+trading-core = { path = "../trading-core" }
+
 # Async runtime
 tokio = { version = "1.44", features = ["full"] }
 
@@ -15,7 +18,7 @@ tower = { version = "0.5", features = ["util", "timeout", "limit"] }
 tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
 
 # WebSocket
-tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
+tokio-tungstenite = "0.26"
 futures-util = "0.3"
 
 # Error handling
@@ -64,7 +67,7 @@ rand_distr = "0.4"
 
 [dev-dependencies]
 tokio-test = "0.4"
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 criterion = { version = "0.5", features = ["async_tokio"] }
 
 [[bin]]
