Implement lock-free order book reads with DashMap + ArcSwap
- Replace RwLock<HashMap> with DashMap<QualifiedSymbol, Arc<ArcSwap<State>>>
- Per-symbol sharding: different symbols don't block each other
- Lock-free reads: readers never blocked by writers
- Copy-on-write updates: writers clone, modify, then atomic swap
- Add concurrent access test proving no deadlocks
- Add snapshot() method for atomic bid/ask retrieval

Architecture optimized for trading agent use case:
- WebSocket handlers write via copy-on-write
- Strategies/risk managers read lock-free

--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -43,6 +43,8 @@ async-trait = "0.1"
 
 # URL handling
 url = "2.5"
+arc-swap = "1.7.1"
+dashmap.workspace = true
 
 [dev-dependencies]
 # For integration tests - start exchange servers
