--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -27,9 +27,6 @@ serde_json = "1.0"
 crossbeam-channel = "0.5"
 parking_lot = "0.12"
 
-# Decimal precision
-rust_decimal = { version = "1.37", features = ["serde", "maths"] }
-
 # Logging
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
@@ -45,13 +42,13 @@ async-trait = "0.1"
 url = "2.5"
 arc-swap = "1.7.1"
 dashmap.workspace = true
+uuid = { workspace = true, features = ["v4"] }
 
 [dev-dependencies]
 # For integration tests - start exchange servers
 exchange-sim = { path = "../exchange-sim" }
 axum = "0.8"
 tower = "0.5"
-rust_decimal_macros = "1.37"
 
 [[bin]]
 name = "agent"
