Plan Complete execution/ crate (54 tests) Impact Models: LinearImpact, SquareRootImpact, ObizhaevaWangImpact, FullImpactModel Execution Models: TwapModel, VwapModel, ImplementationShortfallModel, AdaptiveModel risk-management/ crate (62 tests) Regime Detection: MomentBasedDetector, RegimeShiftDetector Market Making: AvellanedaStoikov, InventorySkew, ToxicFlowDetector Manipulation Detection: QuoteStuffingDetector, SpoofingDetector, MomentumIgnitionDetector Reflexive Loop: ReflexiveLoop, CircuitBreaker with feedback loop detection exchange-sim config Added event_latency_us and order_latency_us to AccountConfig for simulating colocation advantage All 116+ tests passing across execution and risk-management crates. The exchange-sim crate has pre-existing compilation issues from unstable let-chain features that are unrelated to the config changes.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ members = [
     "trading-infra/transport",
     "trading-infra/gateway",
     "trading-infra/strategy",
+    "trading-infra/execution",
+    "trading-infra/risk-management",
 ]
 
 [workspace.package]
