Add ABM agent framework with exchange-sim integration
Agent Framework (abm/src/application/agents/):
- Agent trait with on_tick, on_fill, on_event callbacks
- 6 profit-seeking agent types: DMM, Arbitrageur, NoiseTrader,
  MomentumTrader, MeanReversionTrader, InformedTrader
- MarketState, BBO, DepthLevel types for market observation
- AgentAction enum for order submission/cancellation

Simulation Runners (abm/src/application/simulation/):
- SimulationRunner: Sync runner with simplified fill simulation
- AsyncSimulationRunner: Uses exchange-sim for real matching
  with price-time priority and balance enforcement

Exchange Adapter (abm/src/infrastructure/):
- ExchangeAdapter wrapping exchange-sim matching engine
- seed_orderbook() for initial liquidity (cold-start solution)
- Account creation, order submission, orderbook access
- MockFeed for reference price simulation

Risk Management Extensions:
- PnL tracking with realized/unrealized calculation
- ReferenceFeed trait for external price feeds

exchange-sim Fixes:
- Convert unstable let-chain patterns to nested if-let
  for stable Rust compatibility

All 59 ABM tests passing (53 unit + 6 statistical validation)

--- a/abm/Cargo.toml
+++ b/abm/Cargo.toml
@@ -11,6 +11,18 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 trading-core = { path = "../trading-core" }
+exchange-sim = { path = "../exchange-sim" }
+risk-management = { path = "../trading-infra/risk-management" }
+
+# Time handling
+chrono = "0.4"
+
+# Async runtime
+tokio = { version = "1", features = ["sync", "rt"] }
+async-trait = "0.1"
+
+# Thread-safe utilities
+parking_lot = "0.12"
 
 # Random number generation
 rand = "0.8"
